...
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <SearchView
        android:textAllCaps="false"
        android:id="@+id/searchbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search..."
        android:layout_gravity="center_horizontal" />

...
