...
    android:layout_height="fill_parent"
    android:background="#80000000"
    android:gravity="center">


    <ListView
        android:id="@+id/list_product"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:divider="#0e1717"
        android:dividerHeight="6dp"
        android:drawSelectorOnTop="true"
...
