...
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <SearchView
        android:textAllCaps="false"
        android:id="@+id/search_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search..."/>

    <ListView
...
