<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="names">Gaming Forecast!</string>
    <string name="action_settings">Settings.</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="searchforgame">Search For Game</string>
    <string name="mostpopular">Most Popular</string>
    <string name="app_name">Fragment Example</string>
    <string name="detail_heading">Web Page Detail</string>
    <string name="list_heading">Web Page Listing</string>
</resources>
